--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -52,6 +52,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="5JF-zb-ctL" firstAttribute="top" secondItem="Qc5-NP-e6i" secondAttribute="bottom" constant="10" id="1PM-uu-r5p"/>
                             <constraint firstItem="Qc5-NP-e6i" firstAttribute="top" secondItem="yY4-bQ-kTw" secondAttribute="bottom" constant="10" id="7C5-o6-D1l"/>
@@ -71,6 +72,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yY4-bQ-kTw" secondAttribute="trailing" constant="30" id="vNe-vv-pHb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Utj-Fr-RAE" appends="YES" id="AVt-cV-XJu"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="i8T-fd-UbB"/>
                     <connections>
@@ -81,6 +85,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Utj-Fr-RAE">
+                    <connections>
+                        <action selector="didTapScreen:" destination="BYZ-38-t0r" id="X8a-Ek-Alz"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1262" y="119"/>
         </scene>
@@ -240,6 +249,12 @@
                                                 <constraint firstItem="imf-cK-G9A" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leadingMargin" constant="2" id="tQk-eE-DCJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="captionLabel" destination="gwy-pt-jnf" id="vaS-SW-nqx"/>
+                                            <outlet property="postImageView" destination="imf-cK-G9A" id="kKt-WT-euS"/>
+                                            <outlet property="userImageView" destination="Z9l-U0-43g" id="7Nd-9E-llh"/>
+                                            <outlet property="usernameLabel" destination="7En-Sh-RBc" id="gD2-oW-9g8"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -275,7 +290,29 @@
                     <view key="view" contentMode="scaleToFill" id="JLq-ZR-9Wh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="uBC-8P-mDn">
+                                <rect key="frame" x="20" y="118" width="150" height="150"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="83t-X6-7bs"/>
+                                    <constraint firstAttribute="height" constant="150" id="Ewk-TE-QJz"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Caption" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UPj-fH-hkk">
+                                <rect key="frame" x="200" y="118" width="194" height="18.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="uBC-8P-mDn" firstAttribute="leading" secondItem="HS0-1f-w5y" secondAttribute="leading" constant="20" id="7VU-bE-q7k"/>
+                            <constraint firstItem="UPj-fH-hkk" firstAttribute="top" secondItem="HS0-1f-w5y" secondAttribute="top" constant="30" id="Ao1-hK-T0f"/>
+                            <constraint firstItem="uBC-8P-mDn" firstAttribute="top" secondItem="HS0-1f-w5y" secondAttribute="top" constant="30" id="NID-yh-9D9"/>
+                            <constraint firstItem="UPj-fH-hkk" firstAttribute="leading" secondItem="uBC-8P-mDn" secondAttribute="trailing" constant="30" id="P9j-a6-9zk"/>
+                            <constraint firstItem="HS0-1f-w5y" firstAttribute="trailing" secondItem="UPj-fH-hkk" secondAttribute="trailing" constant="20" id="YXg-Qa-okm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="HS0-1f-w5y"/>
                     </view>
                     <navigationItem key="navigationItem" id="n8z-C6-hz3">
@@ -284,11 +321,20 @@
                                 <action selector="didTapCancel:" destination="yvL-zR-LjZ" id="g1i-H8-wVT"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Post" id="qz7-dN-mKs">
+                            <connections>
+                                <action selector="didTapPost:" destination="yvL-zR-LjZ" id="bTV-0h-upb"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="captionField" destination="UPj-fH-hkk" id="FwE-4R-dwI"/>
+                        <outlet property="postImageView" destination="uBC-8P-mDn" id="b01-3c-Vjf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eYb-co-xTH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3016" y="877"/>
+            <point key="canvasLocation" x="3015.9420289855075" y="876.5625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pNH-hH-HeH">
@@ -329,6 +375,7 @@
     </scenes>
     <resources>
         <image name="Icon-61" width="60" height="60"/>
+        <image name="image_placeholder" width="375" height="375"/>
         <image name="insta_camera_btn" width="25" height="25"/>
     </resources>
 </document>
